2014-06-25  Roland Levillain  <roland@lrde.epita.fr>

	Remove extended characters from Swilena.

	* box2d_piter.i,
	* complex.ixx,
	* dynamic_image2d.i,
	* python/complex2-misc.py:
	Here, to convert these files to plain ASCII.

2014-05-23  Roland Levillain  <roland@lrde.epita.fr>

	Improve Swilena's max-tree.py output.

	* println.ixx: Include std_string.i to help SWIG wrap
	mln::debug::println(const std::string&, const Image<I>&) and use
	it...
	* python/max-tree.py: ...here.

2014-05-23  Roland Levillain  <roland@lrde.epita.fr>

	Make Swilena's max-tree.py test fully work with SWIG 2.0.7.

	* morpho.ixx: Give names to wrapped traits, to let SWIG properly
	deduce the return types of wrapped functions templates.
	* python/max-tree.py: Reenable a previously disabled println
	statement.

2014-05-23  Roland Levillain  <roland@lrde.epita.fr>

	Make Swilena compatible with SWIG 2.0.9+.

	* image2d.ixx,
	* neighb2d.i,
	* window2d.i:
	Give names to wrapped base classes, so that recent version of SWIG
	actually considers them and allows upcasts.

2014-05-22  Roland Levillain  <roland@lrde.epita.fr>

	Address Clang warnings in Swilena.

	* dynamic_image2d.i: Here.

2013-09-10  Roland Levillain  <roland@lrde.epita.fr>

	Swilena: Remove lines `VARIABLE = @VARIABLE@' from Makefile.am's.

	* python/Makefile.am: Here, as Automake 1.11+ already takes care
	of this.

2013-09-09  Roland Levillain  <roland@lrde.epita.fr>

	Swilena: Remove Milena's build dir from the file inclusion path.

	* python/Makefile.am (AM_CPPFLAGS): Here.

2013-08-29  Roland Levillain  <roland@lrde.epita.fr>

	Fix inclusion paths in Swilena.

	* python/Makefile.am (AM_CPPFLAGS): Add -I$(top_builddir)/milena.

2013-04-12  Roland Levillain  <roland@lrde.epita.fr>

	Adjust Swilena to Automake parallel tests.

	* python/Makefile.am: s/TESTS_ENVIRONMENT/LOG_COMPILER/.

2013-04-12  Roland Levillain  <roland@lrde.epita.fr>

	Enable verbose messages in Swilena Python tests.

	* run.in: Here.
	Convert to UTF-8.
