@@ -1,3 +1,9 @@
+2014-06-26  Roland Levillain  <roland@lrde.epita.fr>
+
+	Make Swilena more compatible with BSD Make.
+
+	* python/Makefile.am: Do not use `$<' outside suffix rules.
+
 2014-06-25  Roland Levillain  <roland@lrde.epita.fr>
 
 	Remove extended characters from Swilena.
